// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android BpkDialingCodeAccessoryView should render correctly 1`] = `
<View
  accessibilityComponentType="button"
  accessibilityLabel={undefined}
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  accessible={true}
  hitSlop={undefined}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "type": "ThemeAttrAndroid",
    }
  }
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "borderColor": "rgb(230, 228, 235)",
        "flexDirection": "row",
      },
    ]
  }
  testID={undefined}
>
  <Image
    resizeMode="contain"
    style={
      Array [
        Object {
          "borderColor": "rgb(230, 228, 235)",
          "borderWidth": 1,
        },
        Object {
          "height": 10.666666666666666,
          "width": 16,
        },
        Object {
          "marginEnd": 4,
        },
      ]
    }
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "sans-serif",
          "fontSize": 16,
          "fontWeight": "400",
        },
        Array [
          Object {
            "marginEnd": 4,
          },
        ],
      ]
    }
  >
    +44
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [],
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Android BpkDialingCodeAccessoryView should render correctly when \`editable\` is false 1`] = `
<View
  accessibilityComponentType="button"
  accessibilityLabel={undefined}
  accessibilityTraits={
    Array [
      "button",
      "disabled",
    ]
  }
  accessible={true}
  hitSlop={undefined}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "type": "ThemeAttrAndroid",
    }
  }
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "borderColor": "rgb(230, 228, 235)",
        "flexDirection": "row",
      },
    ]
  }
  testID={undefined}
>
  <Image
    resizeMode="contain"
    style={
      Array [
        Object {
          "borderColor": "rgb(230, 228, 235)",
          "borderWidth": 1,
        },
        Object {
          "height": 10.666666666666666,
          "width": 16,
        },
        Object {
          "marginEnd": 4,
        },
      ]
    }
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "sans-serif",
          "fontSize": 16,
          "fontWeight": "400",
        },
        Array [
          Object {
            "marginEnd": 4,
          },
          Object {
            "color": "rgb(230, 228, 235)",
          },
        ],
      ]
    }
  >
    +44
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "color": "rgb(230, 228, 235)",
          },
        ],
      ]
    }
  >
    
  </Text>
</View>
`;
